--- a/config.yml
+++ b/config.yml
@@ -229,6 +229,6 @@ plugins:
   - jekyll-paginate
   - jekyll-sitemap
 
-# Beautiful Jekyll / Dean Attali
+# Beautiful Jekyll / Matt Simoncavage
 # 2fc73a3a967e97599c9763d05e564189
 
